# naga-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: renovate.json
.github/workflows/: ci.yml
back/: CHANGELOG.md  Cargo.toml  README.md
back/src/: config.rs  conv.rs  lib.rs  ra.rs  util.rs  writer.rs
back/tests/: textual.rs
compile-tests/: Cargo.toml  build.rs
compile-tests/tests/: input.wgsl  root.rs
embed/: CHANGELOG.md  Cargo.toml  README.md
embed/src/: configuration_syntax.md  example.wgsl  lib.rs
embed/tests/: interop.rs
embed/tests/interop/: arrays.rs  constants.rs  control_flow.rs  globals_and_functions.rs  main.rs  math_functions.rs  matrices.rs  operators.rs  structs.rs  textures.rs  vector_construction.rs
examples/render/: Cargo.toml
examples/render/src/: main.rs  shader.wgsl
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compile_fail.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs  parsing.rs  tests.rs
nstd/: Cargo.toml
nstd/src/: lib.rs
rt/: CHANGELOG.md  Cargo.toml  README.md
rt/src/: construct.rs  lib.rs  matrix.rs  texture.rs  vector.rs
src/: conv.rs  lib.rs  writer.rs
tests/: interop.rs  textual.rs
