[workspace]
members = [
    ".",
    "back",
    "macros",
    "rt",
]
default-members = [
    ".",
    "back",
    "macros",
    "rt",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/kpreid/naga-rust/"
license = "MIT OR Apache-2.0"

[package]
name = "naga-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Translates WGSL shader code to Rust you can embed in your Rust code."
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
naga-rust-macros.workspace = true
naga-rust-rt.workspace = true

[dev-dependencies]
# Use WGSL frontend and Rust backend to run tests/textual.rs
naga = { workspace = true, features = ["wgsl-in"] }
naga-rust-back = { workspace = true }

[lints]
workspace = true

[workspace.dependencies]
naga-rust = { version = "0.1.0", path = "." }
naga-rust-back = { version = "0.1.0", path = "back" }
naga-rust-macros = { version = "0.1.0", path = "macros" }
naga-rust-rt = { version = "0.1.0", path = "rt" }

bitflags = "2.9"
naga = { version = "24.0.0", default-features = false }
glam = "0.29"

[workspace.lints]

