[workspace]
members = [
    ".",
    "back",
    "macros",
    "rt",
]
default-members = [
    ".",
    "back",
    "macros",
    "rt",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/kpreid/naga-rust/"
license = "MIT OR Apache-2.0"

[package]
name = "naga-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Translates WGSL shader code to Rust you can embed in your Rust code."
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
naga-rust-macros.workspace = true
naga-rust-rt.workspace = true

[dev-dependencies]
# Use WGSL frontend and Rust backend to run tests/textual.rs
naga = { workspace = true, features = ["wgsl-in"] }
naga-rust-back = { workspace = true }

[lints]
workspace = true

[workspace.dependencies]
naga-rust = { version = "0.1.0", path = "." }
naga-rust-back = { version = "0.1.0", path = "back" }
naga-rust-macros = { version = "0.1.0", path = "macros" }
naga-rust-rt = { version = "0.1.0", path = "rt" }

bitflags = "2.9"
naga = { version = "24.0.0", default-features = false }
glam = "0.29"

[workspace.lints.rust]
# rustc lints that are set to deny
elided_lifetimes_in_paths = "deny"

# rustc lints that are set to warn
explicit_outlives_requirements = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
noop_method_call = "warn"
redundant_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
# This lint has false positives on dev-dependencies. Occasionally turn it on to audit non-dev deps.
# unused_crate_dependencies = "warn"

[workspace.lints.clippy]
# clippy lint groups
pedantic = { level = "warn", priority = -1 }

# clippy default lints that are set to allow
bool_assert_comparison = "allow" # not necessarily clearer

# clippy::pedantic lints that are set to allow
explicit_iter_loop = "allow"
match_same_arms = "allow"
semicolon_if_nothing_returned = "allow" # TODO: clean up and enable
too_many_lines = "allow"
unused_self = "allow" # TODO: enable?

# clippy lints that are set to deny
should_panic_without_expect = "deny"

# clippy lints that are set to warn
assigning_clones = "warn"
cast_lossless = "warn"
cast_possible_wrap = "warn"
doc_markdown = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
into_iter_without_iter = "warn"
inconsistent_struct_constructor = "warn"
infinite_loop = "warn"
iter_without_into_iter = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_fields_in_debug = "warn"
module_name_repetitions = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"
pub_without_shorthand = "warn"
return_self_not_must_use = "warn"
# shadow_unrelated = "warn" # TODO: enable
suboptimal_flops = "warn"
trivially_copy_pass_by_ref = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unused_async = "warn"
wrong_self_convention = "warn"
