[package]
name = "naga-rust-back"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "Backend for the Naga shader translator which generates Rust code."
categories = [
    "compilers", # includes transpilers
    "rendering", # a bit debatable
]
keywords = [
    "naga", # related to Naga
    "naga-rust", # keyword for this family of crates
    "shader", # we process shaders, and Naga itself has this keyword
]
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
arrayvec.workspace = true
bitflags.workspace = true
naga.workspace = true

[dev-dependencies]
# Use WGSL frontend and Rust backend to run tests/textual.rs
naga = { workspace = true, features = ["wgsl-in"] }
# String literals with clean indentation for tests
indoc.workspace = true
# String diffs for tests
pretty_assertions.workspace = true

[lints]
workspace = true
