[package]
name = "naga-rust-embed"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "Translates WGSL shader code to Rust embedded in your Rust code."
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
naga-rust-macros.workspace = true
naga-rust-rt.workspace = true

[dev-dependencies]
naga-rust-back = { workspace = true }

exhaust.workspace = true
indoc.workspace = true
pretty_assertions.workspace = true

[lints]
workspace = true
