[package]
name = "naga-rust-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Macros for the `naga-rust-embed` library."
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
naga = { workspace = true, features = ["wgsl-in"] }
naga-rust-back.workspace = true
proc-macro2 = "1.0.86"
quote = "1.0.37"
# TODO: We don’t need full Rust parsing, just extracting literals; find a lighter library.
syn = { version = "2.0.100", default-features = false, features = ["parsing"] }

[lints]
workspace = true
