[package]
name = "naga-rust-macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Macros for the `naga-rust-embed` library."
categories = [] # this is not intended as a separately usable library...
keywords = [
    # ...but we do want to still have the family keyword
    "naga-rust", # keyword for this family of crates
]
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
test = false
doctest = false

[dependencies]
naga = { workspace = true, features = ["wgsl-in"] }
naga-rust-back.workspace = true
proc-macro2 = "1.0.91"
quote = "1.0.37"
syn = { version = "2.0.100", default-features = false, features = ["parsing"] }

[lints]
workspace = true
