[package]
name = "naga-rust-macros"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true
description = "Macros for the `naga-rust-embed` library."
categories = [] # this is not intended as a separately usable library...
keywords = [
    # ...but we do want to still have the family keyword
    "naga-rust", # keyword for this family of crates
]
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true
test = true # syntax error tests only
doctest = false

[dependencies]
# We can get rid of this dependency if `Literal::str_value()` stabilizes.
# <https://github.com/rust-lang/rust/issues/136652>
litrs = { version = "1.0.0", features = ["proc-macro2"] }
naga = { workspace = true, features = ["wgsl-in"] }
naga-rust-back.workspace = true
proc-macro2.workspace = true
quote = "1.0.37"

[lints]
workspace = true
