[package]
name = "naga-rust-rt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Support library for shaders compiled to Rust via the `naga-rust` library."
repository.workspace = true
license.workspace = true

[features]
default = []

[dependencies]
# glam is a temporary measure. Eventually, we will want to replace its vector types with
# potentially ultra-wide vector types for simultaneous SIMD-and-semantic-vector operations.
glam.workspace = true
naga-rust-macros.workspace = true

[lints.clippy]
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
