[package]
name = "naga-rust-rt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Support library for shaders compiled to Rust via the `naga-rust-back` library."
repository.workspace = true
license.workspace = true

[lib]
test = false
doctest = false

[features]
default = []

[dependencies]
num-traits.workspace = true
naga-rust-macros.workspace = true

[lints.clippy]
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
