[package]
name = "naga-rust-rt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Support library for shaders compiled to Rust via the `naga-rust-back` library."
categories = [
    "data-structures", # provides specialized vector types
    "mathematics",
]
keywords = [
    "naga", # related to Naga
    "naga-rust", # keyword for this family of crates
    "shader", # we execute shaders, and Naga itself has this keyword
]
repository.workspace = true
license.workspace = true

[lib]
test = false
doctest = false

[features]
default = []
# If enabled, use `std`’s math functions instead of `libm`’s
std = []

[dependencies]
num-traits = { workspace = true, default-features = false, features = ["libm"] }
naga-rust-macros.workspace = true

[lints.clippy]
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
