[package]
name = "render"
edition = "2024"
repository.workspace = true
license.workspace = true
publish = false
autobins = false

[[example]]
name = "render"
path = "src/main.rs"

[dependencies]
naga-rust-embed = { path = "../../embed" }
pollster.workspace = true
rayon = "1.10.0"
# We use wgpu for delivering the image to the window, *not* for executing the shader!
wgpu = "30.0.0"
winit = "0.30.0"

[lints]
workspace = true
